Refactor entity. Aggiunto elenco corsi seguiti.